# computer_graphics_assignment2

./: CMakeLists.txt  README.md
include/: generate_landscape.h  input_handlers.h  lighting.h
src/: generate_landscape.cpp  input_handlers.cpp  lighting.cpp  main.cpp
